// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AudioRecorder does not render recording preview if paused 1`] = `
<div>
  <div
    class="str-chat__audio_recorder"
    data-testid="audio-recorder"
  >
    <div
      class="str-chat__audio-recorder__recording-playback"
    >
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--ghost str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__toggle-playback-button"
        data-testid="audio-recording-preview-toggle-play-btn"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--play-solid"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.16267 1.57839C4.94283 0.789081 3.33337 1.66467 3.33337 3.11759V12.8825C3.33337 14.3355 4.94283 15.2111 6.16267 14.4217L13.7083 9.53927C14.8248 8.81687 14.8248 7.18333 13.7083 6.46086L6.16267 1.57839Z"
            />
          </svg>
        </div>
      </button>
      <div
        class="str-chat__duration-display str-chat__recording-timer"
      >
        <span
          class="str-chat__duration-display__duration"
        >
          00:44
        </span>
      </div>
      <div
        class="str-chat__wave-progress-bar__track-container"
      >
        <div
          class="str-chat__wave-progress-bar__track"
          data-testid="wave-progress-bar-track"
          role="progressbar"
          style="--str-chat__voice-recording-amplitude-bar-gap-width: 1px;"
        >
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 31.399506330490112%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 24.018539488315582%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 18.365363776683807%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 59.02017951011658%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 26.63217782974243%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 62.37155795097351%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 82.78987407684326%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 15.16059935092926%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 47.57987558841705%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 62.29274868965149%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 55.40405511856079%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 85.32787561416626%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 57.56412744522095%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 83.30334424972534%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 75.42996406555176%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 46.48399353027344%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 77.82987952232361%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 62.917882204055786%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 71.56173586845398%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 7.107513397932053%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 14.29901123046875%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 14.445610344409943%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 95.34039497375488%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 48.61070513725281%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 62.09651231765747%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 8.803673088550568%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 49.2523193359375%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 3.940269351005554%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 77.68490314483643%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 18.697471916675568%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 4.977691546082497%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 5.717025697231293%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 4.073379561305046%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 14.73514586687088%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 94.67474222183228%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 54.55475449562073%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 81.71653747558594%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 61.83612942695618%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 81.5593957901001%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 89.80446457862854%;"
          />
          <div
            class="str-chat__wave-progress-bar__progress-indicator"
            data-testid="wave-progress-bar-progress-indicator"
            style="left: 0px;"
          />
        </div>
      </div>
    </div>
    <div
      class="str-chat__audio_recorder__recording-controls"
    >
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--ghost str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__cancel-button"
        data-testid="cancel-recording-audio-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--trash-bin"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.99969 1.06708C9.35431 1.06708 10.4912 1.98524 10.8288 3.23309H13.8337C14.1649 3.23327 14.4333 3.50242 14.4333 3.83368C14.4331 4.16479 14.1648 4.43311 13.8337 4.43329H13.4284L12.8288 12.9684C12.7577 13.981 11.9152 14.7662 10.9001 14.7663H5.10028C4.08508 14.7663 3.24268 13.9811 3.17157 12.9684L2.57196 4.43329H2.16669C1.83542 4.43329 1.56725 4.1649 1.56708 3.83368C1.56708 3.50231 1.83532 3.23309 2.16669 3.23309H5.17157C5.50918 1.98537 6.64525 1.06722 7.99969 1.06708ZM4.36884 12.8845C4.39581 13.2686 4.71521 13.5671 5.10028 13.5671H10.9001C11.2851 13.567 11.6045 13.2685 11.6315 12.8845L12.2253 4.43329H3.77509L4.36884 12.8845ZM6.06708 10.8337V6.99969C6.06725 6.66847 6.33542 6.40009 6.66669 6.40009C6.99795 6.40009 7.26612 6.66847 7.2663 6.99969V10.8337C7.26612 11.1649 6.99795 11.4333 6.66669 11.4333C6.33542 11.4333 6.06725 11.1649 6.06708 10.8337ZM8.73309 10.8337V6.99969C8.73327 6.66847 9.00242 6.40009 9.33368 6.40009C9.66479 6.40026 9.93311 6.66858 9.93329 6.99969V10.8337C9.93311 11.1648 9.66479 11.4331 9.33368 11.4333C9.00242 11.4333 8.73327 11.1649 8.73309 10.8337ZM7.99969 2.2663C7.31836 2.26642 6.73003 2.66111 6.44696 3.23309H9.55341C9.27031 2.66094 8.68122 2.2663 7.99969 2.2663Z"
            />
          </svg>
        </div>
      </button>
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--outline str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__toggle-recording-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--microphone"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.40105 14.1663V13.2337C5.36412 13.0169 3.6543 11.7088 2.86687 9.90656C2.73439 9.60296 2.87287 9.24915 3.17644 9.11652C3.47997 8.98397 3.83373 9.12267 3.96648 9.42609C4.64599 10.9814 6.19733 12.0667 8.00066 12.0667C9.804 12.0667 11.3553 10.9814 12.0348 9.42609C12.1676 9.12267 12.5213 8.98395 12.8249 9.11652C13.1284 9.24915 13.2669 9.60297 13.1344 9.90656C12.347 11.7088 10.6372 13.0168 8.60027 13.2337V14.1663C8.60027 14.4977 8.33201 14.7669 8.00066 14.7669C7.66929 14.7669 7.40105 14.4977 7.40105 14.1663ZM10.2341 4.66632C10.2339 3.43305 9.23396 2.43295 8.00066 2.43292C6.76735 2.43292 5.76743 3.43303 5.76726 4.66632V7.66632C5.76726 8.89975 6.76725 9.89972 8.00066 9.89972C9.23406 9.89969 10.2341 8.89973 10.2341 7.66632V4.66632ZM11.4343 7.66632C11.4343 9.56247 9.89681 11.0999 8.00066 11.0999C6.1045 11.0999 4.56706 9.56249 4.56706 7.66632V4.66632C4.56724 2.7703 6.10461 1.2337 8.00066 1.2337C9.8967 1.23373 11.4341 2.77031 11.4343 4.66632V7.66632Z"
            />
          </svg>
        </div>
      </button>
      <button
        class="str-chat__button str-chat__button--primary str-chat__button--solid str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__stop-button"
        data-testid="audio-recorder-stop-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 18 14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.79457 10.875L2.32457 7.40502C1.93457 7.01502 1.30457 7.01502 0.91457 7.40502C0.52457 7.79502 0.52457 8.42502 0.91457 8.81502L5.09457 12.995C5.48457 13.385 6.11457 13.385 6.50457 12.995L17.0846 2.41502C17.4746 2.02502 17.4746 1.39502 17.0846 1.00502C16.6946 0.615024 16.0646 0.615024 15.6746 1.00502L5.79457 10.875Z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`AudioRecorder does not render recording preview if recording 1`] = `
<div>
  <div
    class="str-chat__audio_recorder"
    data-testid="audio-recorder"
  >
    <div
      class="str-chat__audio-recorder__recording-preview"
    >
      <svg
        class="str-chat__icon str-chat__icon--microphone"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.40105 14.1663V13.2337C5.36412 13.0169 3.6543 11.7088 2.86687 9.90656C2.73439 9.60296 2.87287 9.24915 3.17644 9.11652C3.47997 8.98397 3.83373 9.12267 3.96648 9.42609C4.64599 10.9814 6.19733 12.0667 8.00066 12.0667C9.804 12.0667 11.3553 10.9814 12.0348 9.42609C12.1676 9.12267 12.5213 8.98395 12.8249 9.11652C13.1284 9.24915 13.2669 9.60297 13.1344 9.90656C12.347 11.7088 10.6372 13.0168 8.60027 13.2337V14.1663C8.60027 14.4977 8.33201 14.7669 8.00066 14.7669C7.66929 14.7669 7.40105 14.4977 7.40105 14.1663ZM10.2341 4.66632C10.2339 3.43305 9.23396 2.43295 8.00066 2.43292C6.76735 2.43292 5.76743 3.43303 5.76726 4.66632V7.66632C5.76726 8.89975 6.76725 9.89972 8.00066 9.89972C9.23406 9.89969 10.2341 8.89973 10.2341 7.66632V4.66632ZM11.4343 7.66632C11.4343 9.56247 9.89681 11.0999 8.00066 11.0999C6.1045 11.0999 4.56706 9.56249 4.56706 7.66632V4.66632C4.56724 2.7703 6.10461 1.2337 8.00066 1.2337C9.8967 1.23373 11.4341 2.77031 11.4343 4.66632V7.66632Z"
        />
      </svg>
      <div
        class="str-chat__recording-timer"
      >
        00:00
      </div>
      <div
        class="str-chat__waveform-box-container"
      >
        <div
          class="str-chat__wave-progress-bar__track"
        />
      </div>
    </div>
    <div
      class="str-chat__audio_recorder__recording-controls"
    >
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--outline str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__toggle-recording-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--pause"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4.49996 2C3.48744 2 2.66663 2.82081 2.66663 3.83333V12.1667C2.66663 13.1792 3.48744 14 4.49996 14H4.83329C5.84581 14 6.66663 13.1792 6.66663 12.1667V3.83333C6.66663 2.82081 5.84581 2 4.83329 2H4.49996Z"
            />
            <path
              d="M11.1666 2C10.1541 2 9.33329 2.82081 9.33329 3.83333V12.1667C9.33329 13.1792 10.1541 14 11.1666 14H11.5C12.5125 14 13.3333 13.1792 13.3333 12.1667V3.83333C13.3333 2.82081 12.5125 2 11.5 2H11.1666Z"
            />
          </svg>
        </div>
      </button>
      <button
        class="str-chat__button str-chat__button--primary str-chat__button--solid str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__stop-button"
        data-testid="audio-recorder-stop-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 18 14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.79457 10.875L2.32457 7.40502C1.93457 7.01502 1.30457 7.01502 0.91457 7.40502C0.52457 7.79502 0.52457 8.42502 0.91457 8.81502L5.09457 12.995C5.48457 13.385 6.11457 13.385 6.50457 12.995L17.0846 2.41502C17.4746 2.02502 17.4746 1.39502 17.0846 1.00502C16.6946 0.615024 16.0646 0.615024 15.6746 1.00502L5.79457 10.875Z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`AudioRecorder renders audio recording in progress UI 1`] = `
<div>
  <div
    class="str-chat__audio_recorder"
    data-testid="audio-recorder"
  >
    <div
      class="str-chat__audio-recorder__recording-preview"
    >
      <svg
        class="str-chat__icon str-chat__icon--microphone"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.40105 14.1663V13.2337C5.36412 13.0169 3.6543 11.7088 2.86687 9.90656C2.73439 9.60296 2.87287 9.24915 3.17644 9.11652C3.47997 8.98397 3.83373 9.12267 3.96648 9.42609C4.64599 10.9814 6.19733 12.0667 8.00066 12.0667C9.804 12.0667 11.3553 10.9814 12.0348 9.42609C12.1676 9.12267 12.5213 8.98395 12.8249 9.11652C13.1284 9.24915 13.2669 9.60297 13.1344 9.90656C12.347 11.7088 10.6372 13.0168 8.60027 13.2337V14.1663C8.60027 14.4977 8.33201 14.7669 8.00066 14.7669C7.66929 14.7669 7.40105 14.4977 7.40105 14.1663ZM10.2341 4.66632C10.2339 3.43305 9.23396 2.43295 8.00066 2.43292C6.76735 2.43292 5.76743 3.43303 5.76726 4.66632V7.66632C5.76726 8.89975 6.76725 9.89972 8.00066 9.89972C9.23406 9.89969 10.2341 8.89973 10.2341 7.66632V4.66632ZM11.4343 7.66632C11.4343 9.56247 9.89681 11.0999 8.00066 11.0999C6.1045 11.0999 4.56706 9.56249 4.56706 7.66632V4.66632C4.56724 2.7703 6.10461 1.2337 8.00066 1.2337C9.8967 1.23373 11.4341 2.77031 11.4343 4.66632V7.66632Z"
        />
      </svg>
      <div
        class="str-chat__recording-timer"
      >
        00:00
      </div>
      <div
        class="str-chat__waveform-box-container"
      >
        <div
          class="str-chat__wave-progress-bar__track"
        />
      </div>
    </div>
    <div
      class="str-chat__audio_recorder__recording-controls"
    >
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--outline str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__toggle-recording-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--pause"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4.49996 2C3.48744 2 2.66663 2.82081 2.66663 3.83333V12.1667C2.66663 13.1792 3.48744 14 4.49996 14H4.83329C5.84581 14 6.66663 13.1792 6.66663 12.1667V3.83333C6.66663 2.82081 5.84581 2 4.83329 2H4.49996Z"
            />
            <path
              d="M11.1666 2C10.1541 2 9.33329 2.82081 9.33329 3.83333V12.1667C9.33329 13.1792 10.1541 14 11.1666 14H11.5C12.5125 14 13.3333 13.1792 13.3333 12.1667V3.83333C13.3333 2.82081 12.5125 2 11.5 2H11.1666Z"
            />
          </svg>
        </div>
      </button>
      <button
        class="str-chat__button str-chat__button--primary str-chat__button--solid str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__stop-button"
        data-testid="audio-recorder-stop-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 18 14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.79457 10.875L2.32457 7.40502C1.93457 7.01502 1.30457 7.01502 0.91457 7.40502C0.52457 7.79502 0.52457 8.42502 0.91457 8.81502L5.09457 12.995C5.48457 13.385 6.11457 13.385 6.50457 12.995L17.0846 2.41502C17.4746 2.02502 17.4746 1.39502 17.0846 1.00502C16.6946 0.615024 16.0646 0.615024 15.6746 1.00502L5.79457 10.875Z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`AudioRecorder renders audio recording paused UI when paused 1`] = `
<div>
  <div
    class="str-chat__audio_recorder"
    data-testid="audio-recorder"
  >
    <div
      class="str-chat__audio_recorder__recording-controls"
    >
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--ghost str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__cancel-button"
        data-testid="cancel-recording-audio-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--trash-bin"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.99969 1.06708C9.35431 1.06708 10.4912 1.98524 10.8288 3.23309H13.8337C14.1649 3.23327 14.4333 3.50242 14.4333 3.83368C14.4331 4.16479 14.1648 4.43311 13.8337 4.43329H13.4284L12.8288 12.9684C12.7577 13.981 11.9152 14.7662 10.9001 14.7663H5.10028C4.08508 14.7663 3.24268 13.9811 3.17157 12.9684L2.57196 4.43329H2.16669C1.83542 4.43329 1.56725 4.1649 1.56708 3.83368C1.56708 3.50231 1.83532 3.23309 2.16669 3.23309H5.17157C5.50918 1.98537 6.64525 1.06722 7.99969 1.06708ZM4.36884 12.8845C4.39581 13.2686 4.71521 13.5671 5.10028 13.5671H10.9001C11.2851 13.567 11.6045 13.2685 11.6315 12.8845L12.2253 4.43329H3.77509L4.36884 12.8845ZM6.06708 10.8337V6.99969C6.06725 6.66847 6.33542 6.40009 6.66669 6.40009C6.99795 6.40009 7.26612 6.66847 7.2663 6.99969V10.8337C7.26612 11.1649 6.99795 11.4333 6.66669 11.4333C6.33542 11.4333 6.06725 11.1649 6.06708 10.8337ZM8.73309 10.8337V6.99969C8.73327 6.66847 9.00242 6.40009 9.33368 6.40009C9.66479 6.40026 9.93311 6.66858 9.93329 6.99969V10.8337C9.93311 11.1648 9.66479 11.4331 9.33368 11.4333C9.00242 11.4333 8.73327 11.1649 8.73309 10.8337ZM7.99969 2.2663C7.31836 2.26642 6.73003 2.66111 6.44696 3.23309H9.55341C9.27031 2.66094 8.68122 2.2663 7.99969 2.2663Z"
            />
          </svg>
        </div>
      </button>
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--outline str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__toggle-recording-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--microphone"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.40105 14.1663V13.2337C5.36412 13.0169 3.6543 11.7088 2.86687 9.90656C2.73439 9.60296 2.87287 9.24915 3.17644 9.11652C3.47997 8.98397 3.83373 9.12267 3.96648 9.42609C4.64599 10.9814 6.19733 12.0667 8.00066 12.0667C9.804 12.0667 11.3553 10.9814 12.0348 9.42609C12.1676 9.12267 12.5213 8.98395 12.8249 9.11652C13.1284 9.24915 13.2669 9.60297 13.1344 9.90656C12.347 11.7088 10.6372 13.0168 8.60027 13.2337V14.1663C8.60027 14.4977 8.33201 14.7669 8.00066 14.7669C7.66929 14.7669 7.40105 14.4977 7.40105 14.1663ZM10.2341 4.66632C10.2339 3.43305 9.23396 2.43295 8.00066 2.43292C6.76735 2.43292 5.76743 3.43303 5.76726 4.66632V7.66632C5.76726 8.89975 6.76725 9.89972 8.00066 9.89972C9.23406 9.89969 10.2341 8.89973 10.2341 7.66632V4.66632ZM11.4343 7.66632C11.4343 9.56247 9.89681 11.0999 8.00066 11.0999C6.1045 11.0999 4.56706 9.56249 4.56706 7.66632V4.66632C4.56724 2.7703 6.10461 1.2337 8.00066 1.2337C9.8967 1.23373 11.4341 2.77031 11.4343 4.66632V7.66632Z"
            />
          </svg>
        </div>
      </button>
      <button
        class="str-chat__button str-chat__button--primary str-chat__button--solid str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__stop-button"
        data-testid="audio-recorder-stop-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 18 14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.79457 10.875L2.32457 7.40502C1.93457 7.01502 1.30457 7.01502 0.91457 7.40502C0.52457 7.79502 0.52457 8.42502 0.91457 8.81502L5.09457 12.995C5.48457 13.385 6.11457 13.385 6.50457 12.995L17.0846 2.41502C17.4746 2.02502 17.4746 1.39502 17.0846 1.00502C16.6946 0.615024 16.0646 0.615024 15.6746 1.00502L5.79457 10.875Z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`AudioRecorder renders audio recording stopped UI when stopped without recording preview 1`] = `
<div>
  <div
    class="str-chat__audio_recorder"
    data-testid="audio-recorder"
  >
    <div
      class="str-chat__audio_recorder__recording-controls"
    >
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--ghost str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__cancel-button"
        data-testid="cancel-recording-audio-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--trash-bin"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.99969 1.06708C9.35431 1.06708 10.4912 1.98524 10.8288 3.23309H13.8337C14.1649 3.23327 14.4333 3.50242 14.4333 3.83368C14.4331 4.16479 14.1648 4.43311 13.8337 4.43329H13.4284L12.8288 12.9684C12.7577 13.981 11.9152 14.7662 10.9001 14.7663H5.10028C4.08508 14.7663 3.24268 13.9811 3.17157 12.9684L2.57196 4.43329H2.16669C1.83542 4.43329 1.56725 4.1649 1.56708 3.83368C1.56708 3.50231 1.83532 3.23309 2.16669 3.23309H5.17157C5.50918 1.98537 6.64525 1.06722 7.99969 1.06708ZM4.36884 12.8845C4.39581 13.2686 4.71521 13.5671 5.10028 13.5671H10.9001C11.2851 13.567 11.6045 13.2685 11.6315 12.8845L12.2253 4.43329H3.77509L4.36884 12.8845ZM6.06708 10.8337V6.99969C6.06725 6.66847 6.33542 6.40009 6.66669 6.40009C6.99795 6.40009 7.26612 6.66847 7.2663 6.99969V10.8337C7.26612 11.1649 6.99795 11.4333 6.66669 11.4333C6.33542 11.4333 6.06725 11.1649 6.06708 10.8337ZM8.73309 10.8337V6.99969C8.73327 6.66847 9.00242 6.40009 9.33368 6.40009C9.66479 6.40026 9.93311 6.66858 9.93329 6.99969V10.8337C9.93311 11.1648 9.66479 11.4331 9.33368 11.4333C9.00242 11.4333 8.73327 11.1649 8.73309 10.8337ZM7.99969 2.2663C7.31836 2.26642 6.73003 2.66111 6.44696 3.23309H9.55341C9.27031 2.66094 8.68122 2.2663 7.99969 2.2663Z"
            />
          </svg>
        </div>
      </button>
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--outline str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__toggle-recording-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--microphone"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.40105 14.1663V13.2337C5.36412 13.0169 3.6543 11.7088 2.86687 9.90656C2.73439 9.60296 2.87287 9.24915 3.17644 9.11652C3.47997 8.98397 3.83373 9.12267 3.96648 9.42609C4.64599 10.9814 6.19733 12.0667 8.00066 12.0667C9.804 12.0667 11.3553 10.9814 12.0348 9.42609C12.1676 9.12267 12.5213 8.98395 12.8249 9.11652C13.1284 9.24915 13.2669 9.60297 13.1344 9.90656C12.347 11.7088 10.6372 13.0168 8.60027 13.2337V14.1663C8.60027 14.4977 8.33201 14.7669 8.00066 14.7669C7.66929 14.7669 7.40105 14.4977 7.40105 14.1663ZM10.2341 4.66632C10.2339 3.43305 9.23396 2.43295 8.00066 2.43292C6.76735 2.43292 5.76743 3.43303 5.76726 4.66632V7.66632C5.76726 8.89975 6.76725 9.89972 8.00066 9.89972C9.23406 9.89969 10.2341 8.89973 10.2341 7.66632V4.66632ZM11.4343 7.66632C11.4343 9.56247 9.89681 11.0999 8.00066 11.0999C6.1045 11.0999 4.56706 9.56249 4.56706 7.66632V4.66632C4.56724 2.7703 6.10461 1.2337 8.00066 1.2337C9.8967 1.23373 11.4341 2.77031 11.4343 4.66632V7.66632Z"
            />
          </svg>
        </div>
      </button>
      <button
        class="str-chat__button str-chat__button--primary str-chat__button--solid str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__stop-button"
        data-testid="audio-recorder-stop-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 18 14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.79457 10.875L2.32457 7.40502C1.93457 7.01502 1.30457 7.01502 0.91457 7.40502C0.52457 7.79502 0.52457 8.42502 0.91457 8.81502L5.09457 12.995C5.48457 13.385 6.11457 13.385 6.50457 12.995L17.0846 2.41502C17.4746 2.02502 17.4746 1.39502 17.0846 1.00502C16.6946 0.615024 16.0646 0.615024 15.6746 1.00502L5.79457 10.875Z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`AudioRecorder renders audio recording stopped UI with recording preview 1`] = `
<div>
  <div
    class="str-chat__audio_recorder"
    data-testid="audio-recorder"
  >
    <div
      class="str-chat__audio-recorder__recording-playback"
    >
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--ghost str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__toggle-playback-button"
        data-testid="audio-recording-preview-toggle-play-btn"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--play-solid"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.16267 1.57839C4.94283 0.789081 3.33337 1.66467 3.33337 3.11759V12.8825C3.33337 14.3355 4.94283 15.2111 6.16267 14.4217L13.7083 9.53927C14.8248 8.81687 14.8248 7.18333 13.7083 6.46086L6.16267 1.57839Z"
            />
          </svg>
        </div>
      </button>
      <div
        class="str-chat__duration-display str-chat__recording-timer"
      >
        <span
          class="str-chat__duration-display__duration"
        >
          00:44
        </span>
      </div>
      <div
        class="str-chat__wave-progress-bar__track-container"
      >
        <div
          class="str-chat__wave-progress-bar__track"
          data-testid="wave-progress-bar-track"
          role="progressbar"
          style="--str-chat__voice-recording-amplitude-bar-gap-width: 1px;"
        >
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 31.399506330490112%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 24.018539488315582%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 18.365363776683807%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 59.02017951011658%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 26.63217782974243%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 62.37155795097351%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 82.78987407684326%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 15.16059935092926%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 47.57987558841705%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 62.29274868965149%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 55.40405511856079%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 85.32787561416626%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 57.56412744522095%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 83.30334424972534%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 75.42996406555176%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 46.48399353027344%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 77.82987952232361%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 62.917882204055786%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 71.56173586845398%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 7.107513397932053%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 14.29901123046875%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 14.445610344409943%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 95.34039497375488%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 48.61070513725281%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 62.09651231765747%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 8.803673088550568%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 49.2523193359375%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 3.940269351005554%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 77.68490314483643%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 18.697471916675568%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 4.977691546082497%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 5.717025697231293%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 4.073379561305046%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 14.73514586687088%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 94.67474222183228%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 54.55475449562073%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 81.71653747558594%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 61.83612942695618%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 81.5593957901001%;"
          />
          <div
            class="str-chat__wave-progress-bar__amplitude-bar"
            data-testid="amplitude-bar"
            style="--str-chat__voice-recording-amplitude-bar-width: 2px; --str-chat__wave-progress-bar__amplitude-bar-height: 89.80446457862854%;"
          />
          <div
            class="str-chat__wave-progress-bar__progress-indicator"
            data-testid="wave-progress-bar-progress-indicator"
            style="left: 0px;"
          />
        </div>
      </div>
    </div>
    <div
      class="str-chat__audio_recorder__recording-controls"
    >
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--ghost str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__cancel-button"
        data-testid="cancel-recording-audio-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--trash-bin"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.99969 1.06708C9.35431 1.06708 10.4912 1.98524 10.8288 3.23309H13.8337C14.1649 3.23327 14.4333 3.50242 14.4333 3.83368C14.4331 4.16479 14.1648 4.43311 13.8337 4.43329H13.4284L12.8288 12.9684C12.7577 13.981 11.9152 14.7662 10.9001 14.7663H5.10028C4.08508 14.7663 3.24268 13.9811 3.17157 12.9684L2.57196 4.43329H2.16669C1.83542 4.43329 1.56725 4.1649 1.56708 3.83368C1.56708 3.50231 1.83532 3.23309 2.16669 3.23309H5.17157C5.50918 1.98537 6.64525 1.06722 7.99969 1.06708ZM4.36884 12.8845C4.39581 13.2686 4.71521 13.5671 5.10028 13.5671H10.9001C11.2851 13.567 11.6045 13.2685 11.6315 12.8845L12.2253 4.43329H3.77509L4.36884 12.8845ZM6.06708 10.8337V6.99969C6.06725 6.66847 6.33542 6.40009 6.66669 6.40009C6.99795 6.40009 7.26612 6.66847 7.2663 6.99969V10.8337C7.26612 11.1649 6.99795 11.4333 6.66669 11.4333C6.33542 11.4333 6.06725 11.1649 6.06708 10.8337ZM8.73309 10.8337V6.99969C8.73327 6.66847 9.00242 6.40009 9.33368 6.40009C9.66479 6.40026 9.93311 6.66858 9.93329 6.99969V10.8337C9.93311 11.1648 9.66479 11.4331 9.33368 11.4333C9.00242 11.4333 8.73327 11.1649 8.73309 10.8337ZM7.99969 2.2663C7.31836 2.26642 6.73003 2.66111 6.44696 3.23309H9.55341C9.27031 2.66094 8.68122 2.2663 7.99969 2.2663Z"
            />
          </svg>
        </div>
      </button>
      <button
        class="str-chat__button str-chat__button--secondary str-chat__button--outline str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__toggle-recording-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            class="str-chat__icon str-chat__icon--microphone"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.40105 14.1663V13.2337C5.36412 13.0169 3.6543 11.7088 2.86687 9.90656C2.73439 9.60296 2.87287 9.24915 3.17644 9.11652C3.47997 8.98397 3.83373 9.12267 3.96648 9.42609C4.64599 10.9814 6.19733 12.0667 8.00066 12.0667C9.804 12.0667 11.3553 10.9814 12.0348 9.42609C12.1676 9.12267 12.5213 8.98395 12.8249 9.11652C13.1284 9.24915 13.2669 9.60297 13.1344 9.90656C12.347 11.7088 10.6372 13.0168 8.60027 13.2337V14.1663C8.60027 14.4977 8.33201 14.7669 8.00066 14.7669C7.66929 14.7669 7.40105 14.4977 7.40105 14.1663ZM10.2341 4.66632C10.2339 3.43305 9.23396 2.43295 8.00066 2.43292C6.76735 2.43292 5.76743 3.43303 5.76726 4.66632V7.66632C5.76726 8.89975 6.76725 9.89972 8.00066 9.89972C9.23406 9.89969 10.2341 8.89973 10.2341 7.66632V4.66632ZM11.4343 7.66632C11.4343 9.56247 9.89681 11.0999 8.00066 11.0999C6.1045 11.0999 4.56706 9.56249 4.56706 7.66632V4.66632C4.56724 2.7703 6.10461 1.2337 8.00066 1.2337C9.8967 1.23373 11.4341 2.77031 11.4343 4.66632V7.66632Z"
            />
          </svg>
        </div>
      </button>
      <button
        class="str-chat__button str-chat__button--primary str-chat__button--solid str-chat__button--circular str-chat__button--size-sm str-chat__audio_recorder__stop-button"
        data-testid="audio-recorder-stop-button"
        type="button"
      >
        <div
          class="str-chat__button__content"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 18 14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.79457 10.875L2.32457 7.40502C1.93457 7.01502 1.30457 7.01502 0.91457 7.40502C0.52457 7.79502 0.52457 8.42502 0.91457 8.81502L5.09457 12.995C5.48457 13.385 6.11457 13.385 6.50457 12.995L17.0846 2.41502C17.4746 2.02502 17.4746 1.39502 17.0846 1.00502C16.6946 0.615024 16.0646 0.615024 15.6746 1.00502L5.79457 10.875Z"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;
